Fix strange error withbs form alignment

--- a/css/template.css
+++ b/css/template.css
@@ -6778,6 +6778,9 @@ h6,
 .h6 {
   margin-top: 0px;
 }
+.btn {
+  padding: 5px 12px;
+}
 .nav-tabs > li > a {
   background: #F2F2F2;
   border-bottom: 1px solid #dddddd;
